ping-pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      volumes:
        - name: log-and-pingpong
          persistentVolumeClaim:
            claimName: log-and-pingpong
      containers:
        - name: ping-pong
          image: fallmx/ping-pong:1.11
          volumeMounts:
          - name: log-and-pingpong
            mountPath: /mnt/log-and-pingpong
