ping-pong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - protocol: TCP
      port: 8083
