ping-pong/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ping-pong
spec:
  hostnames:
    - localhost
  parentRefs:
  - name: dwk-cluster-gateway
    namespace: default
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /pingpong
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: ping-pong
      port: 8083
